@@ -569,12 +569,6 @@ A number of small performance enhancements have been added:
 Filenames and Unicode
 =====================
 
-The filesystem encoding can be specified by setting the
-:envvar:`PYTHONFSENCODING` environment variable before running the interpreter.
-The value is an encoding name, e.g. ``iso-8859-1``. This variable is not
-available (ignored) on Windows and Mac OS X: the filesystem encoding is pinned
-to ``'mbcs'`` on Windows and ``'utf-8'`` on Mac OS X.
-
 The :mod:`os` module has two new functions: :func:`~os.fsencode` and
 :func:`~os.fsdecode`.
 
