@@ -10,6 +10,8 @@ What's New in Python 3.2 Beta 1?
 Core and Builtins
 -----------------
 
+- Issue #9992: Remove PYTHONFSENCODING environment variable.
+
 Library
 -------
 
